* 2017/06/05
 - Fin de la gestion de config avec mise en place d'un CSS dédier et d'un fichier ico associé
 - Creation du fichier PAge_Message.h qui reprend les fonction qui existait dans .ino
 TODO : 
    Regrouper toutes les HEADER et FOOTER des page

* 2017/06/02
 - Ajout de la gestion de configuration en mode AP d'après :
   https://www.john-lassen.de/en/projects/esp-8266-arduino-ide-webconfig

* 2017/05/28
 - Ajout de 2 module suplémentaire.
 - Pour afficher des police 5 Bit, il faut tout refaire au niveau de l'envoie des donnée
 - Gestion d'un état qui permet d'économiser l'énergie, en arrêtant le Led, mais sans metre encore le controleur dans un etat de sommeil

* 2017/05/26
 - LE problème c'est que tous l'algo est pensé pour envoyé 8 bit * 8bit pour chaque caracetere
 - Quand on en envoie 6 x 6 il faut generer les caracteres suivant avant mais comment ??????

* 2017/05/22
 - ajout d'une font 5 bit de large et tentative d'inserer dans MAX7219_Dot_Matrix::sendSmooth
   -> Les caracteres ne sont pas plus sérré ??????????

* 2017/05/21
 - Ajout de la librairie NTP : https://github.com/arduino-libraries/NTPClient
  -=- Reste a géré le Problème de changement d'heure.
 - LE capteur de presence ne fonctionne toujours pas

* 2017/05/20 
  - Deplacement des fichiers de la librairie "MAX7219_Dot_MatrixESP-master" en local pour la modifier
  - ajout d'une font dans le fichier MAX7219_Dot_Matrix_font
  		 recupéré https://github.com/d2r2/go-max7219/blob/master/fonts.go
  - ajout des lettres àéèêç par aeeec en attendant de reprendre les caractère
  - ajout de la gestions d'une fonte dans "MAX7219_Dot_Matrix.h" et "MAX7219_Dot_Matrix.cpp"
  		Pas comme je le voulais, mais impossible d'avoir un point sur un const !!!!!
  - PRise en compte de la selection de font dans l'interface html 
